--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           src="assets/assets/Avatar.png"
           alt="Foto de Mayk Brito sorrindo, usando óculos e camisa preta, barba e fundo amarelo."
         />
-        <p>@maykebrito</p>
+        <p>@depetraquim</p>
       </div>
 
       <div id="switch" onclick="toggleMode()">
@@ -28,19 +28,19 @@
       </div>
       <ul>
         <li>
-          <a href="#">Inscreverse no NLW</a>
+          <a href="#">Oi!</a>
         </li>
 
         <li>
-          <a href="#">Baixar meu e-book</a>
+          <a href="#">você sabia?</a>
         </li>
 
         <li>
-          <a href="https://github.com/maykebrito">Ver meu portfólio</a>
+          <a href="https://github.com/maykebrito">que eu te amo?</a>
         </li>
         <li>
           <a href="https://rocketseat.com.br/explorer" target="_blank"
-            >Conheça o explorer</a
+            >♥</a
           >
         </li>
       </ul>
@@ -59,7 +59,7 @@
         </a>
       </div>
       <footer>
-        Feito com ♥ pela <a href="https://rocketseat.com.br">Rocketseat</a>
+        Feito com ♥ pelo <a href="https://rocketseat.com.br">DENE</a>
       </footer>
     </div>
 
