--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
           <a href="https://github.com/maykebrito">que eu te amo?</a>
         </li>
         <li>
-          <a href="https://rocketseat.com.br/explorer" target="_blank"
+          <a href="./assets/assets/Imagem do WhatsApp de 2024-02-14 à(s) 14.53.14_c8f53768.jpg" target="_blank"
             >♥</a
           >
         </li>
       </ul>
       <div id="social-links">
-        <a href="https://github.com/maykebrito" target="_blank">
+        <a href="https://github.com/Denispetraquim2" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https://instagram.com/maykebrito" target="_blank">
+        <a href="https://instagram.com/depetraquim" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://youtube.com/maykebrito" target="_blank">
+        <a href="https://www.youtube.com/channel/UCtlB3H-BE5CrfvNWCxoliug" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
-        <a href="https://linkedin.com/in/maykbrito" target="_blank">
+        <a href="https://www.linkedin.com/in/denis-petraquim-cloud-devops/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
       <footer>
-        Feito com ♥ pelo <a href="https://rocketseat.com.br">DENE</a>
+        Feito com ♥ pelo <a href="https://pt.wikipedia.org/wiki/Amor">DENE para Nik</a>
       </footer>
     </div>
 
