add desafio de alteração do alt

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </a>
       </div>
       <footer>
-        Feito com ♥ pelo <a href="https://pt.wikipedia.org/wiki/Amor">DENE para Nik</a>
+        Feito com ♥ pelo <a href="https://pt.wikipedia.org/wiki/Amor" target="_blank">DENE para Nik</a>
       </footer>
     </div>
 
