--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
       </div>
       <ul>
         <li>
-          <a href="#">Oi!</a>
+          <a href="#">Guizao!</a>
         </li>
 
         <li>
-          <a href="#">você sabia?</a>
+          <a href="#">pau mandado</a>
         </li>
 
         <li>
-          <a href="https://github.com/maykebrito">que eu te amo?</a>
+          <a href="https://github.com/maykebrito">viadero</a>
         </li>
         <li>
-          <a href="./assets/assets/Imagem do WhatsApp de 2024-02-14 à(s) 14.53.14_c8f53768.jpg" target="_blank"
-            >♥</a
+          <a
+            href="./assets/assets/Imagem do WhatsApp de 2024-02-14 à(s) 14.53.14_c8f53768.jpg"
+            target="_blank"
+            >NENGUE</a
           >
         </li>
       </ul>
@@ -51,15 +53,24 @@
         <a href="https://instagram.com/depetraquim" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a href="https://www.youtube.com/channel/UCtlB3H-BE5CrfvNWCxoliug" target="_blank">
+        <a
+          href="https://www.youtube.com/channel/UCtlB3H-BE5CrfvNWCxoliug"
+          target="_blank"
+        >
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
-        <a href="https://www.linkedin.com/in/denis-petraquim-cloud-devops/" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/denis-petraquim-cloud-devops/"
+          target="_blank"
+        >
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
       <footer>
-        Feito com ♥ pelo <a href="https://pt.wikipedia.org/wiki/Amor" target="_blank">DENE para Nik</a>
+        Feito com ♥ pelo
+        <a href="https://pt.wikipedia.org/wiki/Amor" target="_blank"
+          >DENE para Nik</a
+        >
       </footer>
     </div>
 
