--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
       </div>
       <ul>
         <li>
-          <a href="#">Guizao!</a>
+          <a href="#">Oi!</a>
         </li>
 
         <li>
-          <a href="#">pau mandado</a>
+          <a href="#">você sabia?</a>
         </li>
 
         <li>
-          <a href="https://github.com/maykebrito">viadero</a>
+          <a href="https://github.com/maykebrito">que eu te amo?</a>
         </li>
         <li>
           <a
             href="./assets/assets/Imagem do WhatsApp de 2024-02-14 à(s) 14.53.14_c8f53768.jpg"
             target="_blank"
-            >NENGUE</a
+            >♥</a
           >
         </li>
       </ul>
